<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/main_screen_add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:onClick="addButtonClickListener"
        android:text="@string/main_screen_add_button_label" />

    <EditText
        android:id="@+id/income_method_input_text_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/main_screen_add_button"
        android:hint="@string/enter_income_method_input_text_field_hint"
        android:inputType="textCapSentences" />

    <EditText
        android:id="@+id/income_amount_input_text_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/income_method_input_text_field"
        android:hint="@string/enter_income_amount_input_text_field_hint"
        android:inputType="textCapSentences" />

    <ListView
        android:id="@+id/main_screen_list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_screen_add_button" >
    </ListView>

</RelativeLayout>