<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!-- The label that states: Money Left -->

    <TextView
        android:id="@+id/money_left_label"
        style="@style/MoneyLabelTextViews"
        android:text="@string/money_left" />

    <!-- The label that states: Money Left -->

    <TextView
        android:id="@+id/money_left_amount"
        style="@style/MoneyAmountsTextViews"
        android:layout_toRightOf="@+id/money_left_label" />

    <!-- Label that states: Total -->

    <TextView
        android:id="@+id/money_total_label"
        style="@style/MoneyLabelTextViews"
        android:layout_below="@id/money_left_label"
        android:text="@string/money_total" />

    <!-- This will be a dynamic text which will represent the total money left -->

    <TextView
        android:id="@+id/money_total_amount"
        style="@style/MoneyAmountsTextViews"
        android:layout_below="@id/money_left_label"
        android:layout_toRightOf="@id/money_total_label" />

    <!-- Label that states: Per day until next income -->

    <TextView
        android:id="@+id/money_per_day_label"
        style="@style/MoneyLabelTextViews"
        android:layout_below="@id/money_total_amount"
        android:text="@string/money_per_day_label" />

    <!-- A text field representing the amount of money per day the user has until his next income -->

    <TextView
        android:id="@+id/money_per_day_amount"
        style="@style/MoneyAmountsTextViews"
        android:layout_below="@id/money_total_amount"
        android:layout_toRightOf="@id/money_per_day_label" />

</RelativeLayout>